Update CV content and improve navigation

--- a/docs/cv_en.tex
+++ b/docs/cv_en.tex
@@ -65,11 +65,11 @@
 \vspace{1em}
 
 \section{Professional Summary}
-I am a software developer specializing in Android with over 9 years of professional experience in the technology sector. I currently work as a Software Technical Lead at Mercado Libre, leading strategic initiatives within the Mercado Pago ecosystem.
+I am a software developer specializing in Android with over 9 years of experience, currently working as a Software Technical Lead at Mercado Libre. I possess a comprehensive understanding of Android development lifecycles, frameworks, architecture components, mobile analytics, and agile methodologies.
 
-I have a strong focus on software architecture, especially Clean Architecture and MVVM, combining technical excellence with leadership skills to guide teams, define quality standards, and optimize development processes. I handle modern tools like Kotlin, coroutines, Retrofit, Koin, Git, CI/CD, and practice agile methodologies.
+I have a strong focus on software architecture, especially Clean Architecture and MVVM, combining technical excellence with leadership skills to guide teams and define quality standards. I am dedicated to implementing new technologies to produce scalable, maintainable, innovative, and robust applications within the Mercado Pago ecosystem.
 
-I am passionate about building scalable, efficient solutions with a real impact on the user experience. I am constantly looking for challenges that allow me to continue growing professionally and add value to high-impact projects.
+As an enthusiast of computer science, algorithms, and programming, I continuously expand my knowledge through research, technical literature, and staying current with industry trends. I am passionate about building efficient solutions with real impact on user experience, constantly seeking challenges that drive professional growth and add value to high-impact projects.
 
 \section{Professional Experience}
 
