--- a/docs/cv_es.tex
+++ b/docs/cv_es.tex
@@ -66,11 +66,11 @@
 \vspace{1em}
 
 \section{Resumen Profesional}
-Soy un desarrollador de software especializado en Android con más de 9 años de experiencia profesional en el sector tecnológico. Actualmente me desempeño como Líder Técnico de Software en Mercado Libre, liderando iniciativas estratégicas dentro del ecosistema de Mercado Pago.
+Soy un desarrollador de software especializado en Android con más de 9 años de experiencia, actualmente trabajando como Líder Técnico de Software en Mercado Libre. Poseo una comprensión integral de los ciclos de vida del desarrollo Android, frameworks, componentes de arquitectura, analíticas móviles y metodologías ágiles.
 
-Tengo un enfoque sólido en arquitectura de software, especialmente Clean Architecture y MVVM, combinando excelencia técnica con habilidades de liderazgo para guiar equipos, definir estándares de calidad y optimizar procesos de desarrollo. Manejo herramientas modernas como Kotlin, coroutines, Retrofit, Koin, Git, CI/CD, y practico metodologías ágiles.
+Tengo un enfoque sólido en arquitectura de software, especialmente Clean Architecture y MVVM, combinando excelencia técnica con habilidades de liderazgo para guiar equipos y definir estándares de calidad. Me dedico a implementar nuevas tecnologías para producir aplicaciones escalables, mantenibles, innovadoras y robustas dentro del ecosistema de Mercado Pago.
 
-Me apasiona construir soluciones escalables, eficientes y con impacto real en la experiencia del usuario. Busco constantemente desafíos que me permitan seguir creciendo profesionalmente y aportar valor a proyectos de alto impacto.
+Como entusiasta de la ciencia de la computación, algoritmos y programación, continuamente expando mi conocimiento a través de investigación, literatura técnica y manteniéndome actualizado con las tendencias de la industria. Me apasiona construir soluciones eficientes con impacto real en la experiencia del usuario, buscando constantemente desafíos que impulsen el crecimiento profesional y agreguen valor a proyectos de alto impacto.
 
 \section{Experiencia Profesional}
 
